--- a/css/homepage/home.css
+++ b/css/homepage/home.css
@@ -54,7 +54,31 @@ header{
     width:150px;
     border-radius: 50%;
     margin:auto;
-    background-color:rgba(255, 255, 255, 60%)
+    background-color:rgba(255, 255, 255, 60%);
+    animation:revolve 20s infinite
+}
+
+@keyframes revolve{
+    0% {
+        transform: rotate(30deg);
+        margin-left:2%
+    }
+    25% {
+        transform: rotate(90deg);
+        margin-left:20%
+    }
+    50% {
+        transform: rotate(180deg);
+        margin-left:40%
+    }
+    75% {
+        transform: rotate(270deg);
+        margin-left:80%
+    }
+    100% {
+        transform: rotate(360deg);
+        margin-left:40%
+    }
 }
 
 #logo>span{
@@ -99,6 +123,11 @@ select{
     font-weight: bold;
     margin-left:2%;
 }
+
+#quickHeading:hover{
+    font-size:40px;
+    color: #7ff29c;
+}
 #quickSubHeading{
     display: block;
     font-size:20px;
@@ -114,7 +143,26 @@ select{
     float:left;
     margin-left:2%;
     margin-top:2%;
+    animation: dance 10s infinite;
 }
+
+@keyframes dance{
+    0% {transform: rotate(-5deg)}
+    25% {transform: rotate(0deg)}
+    50% {transform: rotate(5deg)}
+    60% {transform: scale(1.1)}
+    75% {transform: rotate(0deg)}
+    100% {transform: rotate(-5deg)}
+}
+
+.tileContainer:hover{
+    /* transform: scale(1.1); */
+    /* transform: skewX(20deg); */
+    /* transform: rotate(180deg); */
+    /* transform: translate(100px, 100px) */
+    transform: scale(1.1);
+}
+
 .tileComponent1{
     width:50%;
     float:left;
@@ -162,4 +210,78 @@ footer{
 
 .noborder{
     border:none
+}
+
+@media screen and (max-width:1600px) {
+    body{
+        background-color:skyblue
+    }
+}
+
+@media screen and (max-width:1400px) {
+    body{
+        background-color:rgb(200, 251, 201)
+    }
+}
+
+@media screen and (max-width:1200px) {
+    body{
+        background-color:rgb(208, 187, 247)
+    }
+}
+
+@media screen and (max-width:1000px) {
+    body{
+        background-color:rgb(246, 196, 212)
+    }
+    .tileContainer{
+        width:45%
+    }
+
+}
+
+@media screen and (max-width:800px) {
+    body{
+        background-color:rgb(234, 240, 178)
+    }
+    .tileContainer{
+        width:95%
+    }
+    #logo>span {
+        margin-left: 5%;
+        margin-top: 3%;
+    }
+    #heading {
+        margin-left: 7%;
+    }
+}
+
+@media screen and (max-width:500px) {
+    body{
+        background-color:rgb(244, 165, 147)
+    }
+    .tileContainer{
+        box-shadow: 10px 20px 10px #faf7f6;
+    }
+
+    #logo>span {
+        margin-left: 7%;
+        margin-top: 5%;
+    }
+    #heading {
+    font-size: 32px;
+    margin-left: 0%;
+    font-weight: bold;
+    }
+    .dropdown {
+        width: 100%;
+        margin-top: 9%;
+        margin-left: 0;
+    }
+    select {
+        width: 100%;
+    }
+    .restSelect {
+        width: 100%;
+    }
 }
